--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library( # Sets the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-             ${CPP_DIR}/native-lib.cpp ${CPP_DIR}/main.cpp)
+             ${CPP_DIR}/native-lib.cpp ${CPP_DIR}/main.cpp ${CPP_DIR}/Md5Utils.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
